--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 
 <head> 
 <meta charset=“UTF-8”> 
-<title>TABI LABO(偽)</title> 
-<link href="./css/style.css" rel="stylesheet" />
+<title>TABI LABO(偽)scss使用</title> 
+<link href="./scss/style.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="./js/main.js"></script>
 
 <link href="https://use.fontawesome.com/releases/v6.6.0/css/all.css" rel="stylesheet">
 
 </head> 
-<body>
-
-
-
+<body class="body">
+    <!--
     <div class="1st-view">
         <div class="top-article">
             <img src="https://placehold.jp/1900x1080.png" style="display:inline; max-width:100%; height:auto;">
@@ -31,12 +29,54 @@
             </div>
         </div>
     </div>
+-->
+    <br><br><br>
 
+    <div>
+    <div class="l-article">
+    <h3 class="title">NEW ARRIVALS</h3>
+    <div class="container">
+        <div class="article">
+            <h3>それっぽいタイトル1</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
+        <div class="article">
+            <h3>それっぽいタイトル2</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
+            <div class="article">
+            <h3>それっぽいタイトル3</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
+        <div class="article">
+            <h3>それっぽいタイトル4</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
+            <div class="article">
+            <h3>それっぽいタイトル5</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
+        <div class="article">
+            <h3>それっぽいタイトル6</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
+            <div class="article">
+            <h3>それっぽいタイトル7</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
+        <div class="article">
+            <h3>それっぽいタイトル8</h3>
+            <p>*それっぽい記事の要約...</p>
+        </div>
 
+    </div>
+    </div>
+    </div>
 
+    <header>
     <nav>
-    <ul class="navbar" style="z-index:10;">
-        <li><img src="./img/tl_logo.svg" style="margin-right:600px"></li>
+    <ul>
+        <li><img src="./img/tl_logo.svg"></li>
         <li><a href="https://www.facebook.com/tabilabonews/"><i class="fab fa-thin fa-facebook-f nav-icon"></i></a></li>
         <li><a href="https://twitter.com/intent/follow?screen_name=tabilabo_news"><i class="fab fa-thin fa-twitter nav-icon"></i></a></li>
         <li><a href="https://www.instagram.com/tabilabo/"><i class="fab fa-thin fa-instagram nav-icon"></i></a></li>
@@ -45,7 +85,7 @@
         <li><a><i class="fas fa-thin fa-magnifying-glass nav-icon"></i></a></li>
     </ul>
     </nav>
-    
+    <header>
 
 </body>
 
