--- a/index.html
+++ b/index.html
@@ -33,44 +33,62 @@
     <br><br><br>
 
     <div>
-    <div class="l-article">
-    <h3 class="title">NEW ARRIVALS</h3>
-    <div class="container">
-        <div class="article">
-            <h3>それっぽいタイトル1</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
-        <div class="article">
-            <h3>それっぽいタイトル2</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
-            <div class="article">
-            <h3>それっぽいタイトル3</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
-        <div class="article">
-            <h3>それっぽいタイトル4</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
-            <div class="article">
-            <h3>それっぽいタイトル5</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
-        <div class="article">
-            <h3>それっぽいタイトル6</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
-            <div class="article">
-            <h3>それっぽいタイトル7</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
-        <div class="article">
-            <h3>それっぽいタイトル8</h3>
-            <p>*それっぽい記事の要約...</p>
-        </div>
+        <div class="l-article">
+        <h3 class="title">NEW ARRIVALS</h3>
+            <div class="container">
 
-    </div>
-    </div>
+                <div class="article">
+                    <div class="u-category"><div class="PR">PR</div></div>
+                    <!--<img src="https://placehold.jp/400x300.png">-->
+                    <div>
+                        <h3>それっぽいタイトル1</h3>
+                        <p>*それっぽい記事の要約...<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="u-category"><div class="ACTIVITY">ACTIVITY</div></div>
+                    <div>
+                        <h3>それっぽいタイトル2</h3>
+                        <p>*それっぽい記事の要約...</p>
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="u-category"><div class="ISSUE">ISSUE</div></div>
+                    <div>
+                        <h3>それっぽいタイトル3</h3>
+                        <p>*それっぽい記事の要約...</p>
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="u-category"><div class="WELL-BEING">WELL-BEING</div></div>
+                    <div>
+                        <h3>それっぽいタイトル4</h3>
+                        <p>*それっぽい記事の要約...</p>
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="u-category"><div class="CULTURE">CULTURE</div></div>
+                    <div>
+                        <h3>それっぽいタイトル5</h3>
+                        <p>*それっぽい記事の要約...</p>
+                    </div>
+                </div>
+
+                <div class="article">
+                    <div class="u-category"><div class="LOVE">LOVE</div></div>
+                    <div>
+                        <h3>それっぽいタイトル6</h3>
+                        <p>*それっぽい記事の要約...</p>
+                    </div>
+                </div>
+            
+
+            </div>
+        </div>
     </div>
 
     <header>
