--- a/index.html
+++ b/index.html
@@ -39,50 +39,53 @@
 
                 <div class="article">
                     <div class="u-category"><div class="PR">PR</div></div>
-                    <!--<img src="https://placehold.jp/400x300.png">-->
-                    <div>
-                        <h3>それっぽいタイトル1</h3>
-                        <p>*それっぽい記事の要約...<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
-                    </div>
+                    <img src="https://placehold.jp/3d4070/ffffff/900x640.png">
+                        <h3>今から学ぶならコレ！2025年、未来を変える最強プログラミング言語トップ3</h2>
+                        <p>あなたのスキル、時代に置いていかれていませんか？今、IT業界で注目されている「Rust」「Python」「TypeScript」は、スピード・汎用性・市場価値の3拍子が揃った最強言語。未経験者でも始められる実践的な入門法と、キャリアにつながる応用事例を徹底解説！</p>
                 </div>
 
                 <div class="article">
                     <div class="u-category"><div class="ACTIVITY">ACTIVITY</div></div>
                     <div>
-                        <h3>それっぽいタイトル2</h3>
-                        <p>*それっぽい記事の要約...</p>
+                        <img src="https://placehold.jp/3da02f/ffffff/900x640.png">
+                        <h3>夏休みは“暇”じゃない！大学生が今やるべき5つのこと</h3>
+                        <p>何となくバイトと遊びで終わっていませんか？長期休暇こそ、成長のチャンスです。インターン、資格勉強、旅、自炊習慣、そして“何もしない時間”の重要性まで、大学生がこの夏取り組むべき価値ある活動を紹介します。</p>
                     </div>
                 </div>
 
                 <div class="article">
                     <div class="u-category"><div class="ISSUE">ISSUE</div></div>
                     <div>
-                        <h3>それっぽいタイトル3</h3>
-                        <p>*それっぽい記事の要約...</p>
+                        <img src="https://placehold.jp/32e1a4/ffffff/900x640.png">
+                        <h3>集中力が爆上がりする科学的習慣5選</h3>
+                        <p>SNSやスマホの誘惑に負けていませんか？集中力のカギは「脳のコンディション」にあります。ポモドーロ・メソッド、ブルーライト管理、カフェインの使い分け、運動と瞑想の意外な効果など、即効性のある実践法を解説します。</p>
                     </div>
                 </div>
 
                 <div class="article">
                     <div class="u-category"><div class="WELL-BEING">WELL-BEING</div></div>
                     <div>
-                        <h3>それっぽいタイトル4</h3>
-                        <p>*それっぽい記事の要約...</p>
+                        <img src="https://placehold.jp/404d10/ffffff/900x640.png">
+                        <h3>“寝ても疲れが取れない”あなたへ。最高の睡眠を手に入れる6つのルール</h3>
+                        <p>質の良い睡眠は、生活のパフォーマンスを劇的に変えます。寝る前のスマホ断ち、部屋の温度・照明、90分サイクルの活用法、そして「朝の過ごし方」がカギ。明日からできる睡眠改善術を、専門知識ベースで紹介します。</p>
                     </div>
                 </div>
 
                 <div class="article">
                     <div class="u-category"><div class="CULTURE">CULTURE</div></div>
                     <div>
-                        <h3>それっぽいタイトル5</h3>
-                        <p>*それっぽい記事の要約...</p>
+                        <img src="https://placehold.jp/8f101e/ffffff/900x640.png">
+                        <h3>なぜ“ミーム”は世界を席巻するのか？インターネット文化の進化論</h3>
+                        <p>「Doge」「Shrek」「Sigma」「Skibidi Toilet」──意味不明だけどクセになる。ミームは今や、政治から経済、アイデンティティまでを動かす文化現象に。誕生から拡散の仕組み、そしてZ世代の自己表現との関係を紐解きます。</p>
                     </div>
                 </div>
 
                 <div class="article">
                     <div class="u-category"><div class="LOVE">LOVE</div></div>
                     <div>
-                        <h3>それっぽいタイトル6</h3>
-                        <p>*それっぽい記事の要約...</p>
+                        <img src="https://placehold.jp/36643f/ffffff/900x640.png">
+                        <h3>恋愛は戦略だ。モテる人に共通する“非モテが見落とす”3つの視点</h3>
+                        <p>外見だけじゃない。「話の聞き方」「余裕のある雰囲気」「セルフイメージの高さ」がカギです。SNSやマッチングアプリ全盛の今だからこそ求められる、リアルな魅力とは？モテのメンタルモデルを徹底解剖。</p>
                     </div>
                 </div>
             
