footerのリファクタリング前
footerをinline-block→flexに修正する前の状態

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         </div>
     </div>
 </main>
-<body class="body">
+<body class="l-body">
     <div class="l-article">
         <h3 class="l-article__title">NEW ARRIVALS</h3>
             <div class="l-article__container">
                 <div class="article">
-                    <div class="p-articletype"><div class="PR">PR</div></div>
+                    <div class="p-articletype"><div class="p-articletype--PR">PR</div></div>
                     <img src="https://placehold.jp/3d4070/ffffff/900x640.png">
                         <h3>今から学ぶならコレ！2025年、未来を変える最強プログラミング言語トップ3</h2>
                         <p>あなたのスキル、時代に置いていかれていませんか？今、IT業界で注目されている「Rust」「Python」「TypeScript」は、スピード・汎用性・市場価値の3拍子が揃った最強言語。未経験者でも始められる実践的な入門法と、キャリアにつながる応用事例を徹底解説！</p>
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="ACTIVITY">ACTIVITY</div></div>
+                    <div class="p-articletype"><div class="p-articletype--ACTIVITY">ACTIVITY</div></div>
                     <div>
                         <img src="https://placehold.jp/3da02f/ffffff/900x640.png">
                         <h3>夏休みは“暇”じゃない！大学生が今やるべき5つのこと</h3>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="ISSUE">ISSUE</div></div>
+                    <div class="p-articletype"><div class="p-articletype--ISSUE">ISSUE</div></div>
                     <div>
                         <img src="https://placehold.jp/32e1a4/ffffff/900x640.png">
                         <h3>集中力が爆上がりする科学的習慣5選</h3>
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="WELL-BEING">WELL-BEING</div></div>
+                    <div class="p-articletype"><div class="p-articletype--WELL-BEING">WELL-BEING</div></div>
                     <div>
                         <img src="https://placehold.jp/404d10/ffffff/900x640.png">
                         <h3>“寝ても疲れが取れない”あなたへ。最高の睡眠を手に入れる6つのルール</h3>
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="CULTURE">CULTURE</div></div>
+                    <div class="p-articletype"><div class="p-articletype--CULTURE">CULTURE</div></div>
                     <div>
                         <img src="https://placehold.jp/8f101e/ffffff/900x640.png">
                         <h3>なぜ“ミーム”は世界を席巻するのか？インターネット文化の進化論</h3>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="LOVE">LOVE</div></div>
+                    <div class="p-articletype"><div class="p-articletype--LOVE">LOVE</div></div>
                     <div>
                         <img src="https://placehold.jp/36643f/ffffff/900x640.png">
                         <h3>恋愛は戦略だ。モテる人に共通する“非モテが見落とす”3つの視点</h3>
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="WELL-BEING">WELL-BEING</div></div>
+                    <div class="p-articletype"><div class="p-articletype--WELL-BEING">WELL-BEING</div></div>
                     <div>
                         <img src="https://placehold.jp/353d1f/ffffff/1200x800.png">
                         <h3>朝5分の“マインドフル呼吸法”で1日が変わる</h3>
@@ -109,7 +109,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="LOVE">LOVE</div></div>
+                    <div class="p-articletype"><div class="p-articletype--LOVE">LOVE</div></div>
                     <div>
                         <img src="https://placehold.jp/65ae2d/ffffff/900x640.png">
                         <h3>恋人に依存しすぎてない？自立した関係を築く5つのヒント</h3>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="CULTURE">CULTURE</div></div>
+                    <div class="p-articletype"><div class="p-articletype--CULTURE">CULTURE</div></div>
                     <div>
                         <img src="https://placehold.jp/3da1a3/ffffff/900x640.png">
                         <h3>なぜ今、若者は“純喫茶”に惹かれるのか？</h3>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="ISSUE">ISSUE</div></div>
+                    <div class="p-articletype"><div class="p-articletype--ISSUE">ISSUE</div></div>
                     <div>
                         <img src="https://placehold.jp/433fd2/ffffff/900x640.png">
                         <h3>スマホ依存は現代病？大学生の8割が“1日5時間以上”利用</h3>
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="PR">PR</div></div>
+                    <div class="p-articletype"><div class="p-articletype--PR">PR</div></div>
                     <div>
                         <img src="https://placehold.jp/40f099/ffffff/900x640.png">
                         <h3>初心者におすすめ！今から学ぶPython講座【広告】</h3>
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="ACTIVITY">ACTIVITY</div></div>
+                    <div class="p-articletype"><div class="p-articletype--ACTIVITY">ACTIVITY</div></div>
                     <div>
                         <img src="https://placehold.jp/21df1a/ffffff/900x640.png">
                         <h3>週末トリップで“非日常”を体験！日帰りおすすめスポット5選</h3>
@@ -154,30 +154,30 @@
                 </div>
 
                 <div class="article">
-                    <div class="p-articletype"><div class="WELL-BEING">WELL-BEING</div></div>
+                    <div class="p-articletype"><div class="p-articletype--WELL-BEING">WELL-BEING</div></div>
                     <div>
                         <img src="https://placehold.jp/329aaa/ffffff/900x640.png">
                         <h3>“8時間睡眠”はもう古い？最新の睡眠科学が導く最適解</h3>
                         <p>量より質へ。最新の研究では、個人に合った睡眠パターンが重要視されています。あなたの生活リズムに合った快眠法を探ってみましょう。</p>
                     </div>
                 </div>            
-
+                <button class="c-button__ShowMore" type="button">VIEW MORE</button>
             </div>
-            <button class="c-button__ShowMore" type="button">VIEW MORE</button>
+
     </div>
 
     <div class="l-article">
             <h3 class="l-article__title">FOR YOU</h3>
                 <div class="l-article__container">
                     <div class="article">
-                        <div class="p-articletype"><div class="PR">PR</div></div>
+                        <div class="p-articletype"><div class="p-articletype--PR">PR</div></div>
                         <img src="https://placehold.jp/3d4070/ffffff/900x640.png">
                             <h3>今から学ぶならコレ！2025年、未来を変える最強プログラミング言語トップ3</h2>
                             <p>あなたのスキル、時代に置いていかれていませんか？今、IT業界で注目されている「Rust」「Python」「TypeScript」は、スピード・汎用性・市場価値の3拍子が揃った最強言語。未経験者でも始められる実践的な入門法と、キャリアにつながる応用事例を徹底解説！</p>
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="ACTIVITY">ACTIVITY</div></div>
+                        <div class="p-articletype"><div class="p-articletype--ACTIVITY">ACTIVITY</div></div>
                         <div>
                             <img src="https://placehold.jp/3da02f/ffffff/900x640.png">
                             <h3>夏休みは“暇”じゃない！大学生が今やるべき5つのこと</h3>
@@ -186,7 +186,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="ISSUE">ISSUE</div></div>
+                        <div class="p-articletype"><div class="p-articletype--ISSUE">ISSUE</div></div>
                         <div>
                             <img src="https://placehold.jp/32e1a4/ffffff/900x640.png">
                             <h3>集中力が爆上がりする科学的習慣5選</h3>
@@ -195,7 +195,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="WELL-BEING">WELL-BEING</div></div>
+                        <div class="p-articletype"><div class="p-articletype--WELL-BEING">WELL-BEING</div></div>
                         <div>
                             <img src="https://placehold.jp/404d10/ffffff/900x640.png">
                             <h3>“寝ても疲れが取れない”あなたへ。最高の睡眠を手に入れる6つのルール</h3>
@@ -204,7 +204,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="CULTURE">CULTURE</div></div>
+                        <div class="p-articletype"><div class="p-articletype--CULTURE">CULTURE</div></div>
                         <div>
                             <img src="https://placehold.jp/8f101e/ffffff/900x640.png">
                             <h3>なぜ“ミーム”は世界を席巻するのか？インターネット文化の進化論</h3>
@@ -213,7 +213,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="LOVE">LOVE</div></div>
+                        <div class="p-articletype"><div class="p-articletype--LOVE">LOVE</div></div>
                         <div>
                             <img src="https://placehold.jp/36643f/ffffff/900x640.png">
                             <h3>恋愛は戦略だ。モテる人に共通する“非モテが見落とす”3つの視点</h3>
@@ -222,7 +222,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="WELL-BEING">WELL-BEING</div></div>
+                        <div class="p-articletype"><div class="p-articletype--WELL-BEING">WELL-BEING</div></div>
                         <div>
                             <img src="https://placehold.jp/353d1f/ffffff/1200x800.png">
                             <h3>朝5分の“マインドフル呼吸法”で1日が変わる</h3>
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="LOVE">LOVE</div></div>
+                        <div class="p-articletype"><div class="p-articletype--LOVE">LOVE</div></div>
                         <div>
                             <img src="https://placehold.jp/65ae2d/ffffff/900x640.png">
                             <h3>恋人に依存しすぎてない？自立した関係を築く5つのヒント</h3>
@@ -240,7 +240,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="CULTURE">CULTURE</div></div>
+                        <div class="p-articletype"><div class="p-articletype--CULTURE">CULTURE</div></div>
                         <div>
                             <img src="https://placehold.jp/3da1a3/ffffff/900x640.png">
                             <h3>なぜ今、若者は“純喫茶”に惹かれるのか？</h3>
@@ -249,7 +249,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="ISSUE">ISSUE</div></div>
+                        <div class="p-articletype"><div class="p-articletype--ISSUE">ISSUE</div></div>
                         <div>
                             <img src="https://placehold.jp/433fd2/ffffff/900x640.png">
                             <h3>スマホ依存は現代病？大学生の8割が“1日5時間以上”利用</h3>
@@ -258,7 +258,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="PR">PR</div></div>
+                        <div class="p-articletype"><div class="p-articletype--PR">PR</div></div>
                         <div>
                             <img src="https://placehold.jp/40f099/ffffff/900x640.png">
                             <h3>初心者におすすめ！今から学ぶPython講座【広告】</h3>
@@ -267,7 +267,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="ACTIVITY">ACTIVITY</div></div>
+                        <div class="p-articletype"><div class="p-articletype--ACTIVITY">ACTIVITY</div></div>
                         <div>
                             <img src="https://placehold.jp/21df1a/ffffff/900x640.png">
                             <h3>週末トリップで“非日常”を体験！日帰りおすすめスポット5選</h3>
@@ -276,7 +276,7 @@
                     </div>
 
                     <div class="article">
-                        <div class="p-articletype"><div class="WELL-BEING">WELL-BEING</div></div>
+                        <div class="p-articletype"><div class="p-articletype--WELL-BEING">WELL-BEING</div></div>
                         <div>
                             <img src="https://placehold.jp/329aaa/ffffff/900x640.png">
                             <h3>“8時間睡眠”はもう古い？最新の睡眠科学が導く最適解</h3>
@@ -427,6 +427,7 @@
         </div>
         <button class="c-button__ShowMore" type="button">VIEW MORE</button>
     </div>
+
     <div class="l-video">
         <div class="l-video__title">VIDEO</div>
         <div  class="l-video__swiper">  <!--Slierのメインクラス-->
@@ -568,9 +569,17 @@
         <div class="l-footer__container__text">TABI LABOの最新記事をCHECK!</div>   
         <div class="c-footer-box">
             <a href="https://www.facebook.com/tabilabonews/"><i class="fab fa-thin fa-facebook-f c-footer-box__icon"></i></a>
+        </div>
+        <div class="c-footer-box">
             <a href="https://twitter.com/intent/follow?screen_name=tabilabo_news"><i class="fab fa-thin fa-twitter c-footer-box__icon"></i></a>
+        </div>
+        <div class="c-footer-box">    
             <a href="https://www.instagram.com/tabilabo/"><i class="fab fa-thin fa-instagram c-footer-box__icon"></i></a>
+        </div>
+        <div class="c-footer-box">
             <a href="https://www.youtube.com/channel/UCosiTouV3orvNLj_mLwpxiA"><i class="fab fa-thin fa-youtube c-footer-box__icon"></i></a>
+        </div>
+        <div class="c-footer-box">
             <a href="http://bit.ly/2iUk72I"><i class="fab fa-thin fa-line c-footer-box__icon"></i></a>
         </div>
         
