footerの修正完了
footer done→ヒーローページの修正前

--- a/index.html
+++ b/index.html
@@ -534,55 +534,41 @@
     <img src="./img/tl_logo.svg" class="l-footer__logo">
     <div class="l-footer__container">
         <div class="l-footer__container__title">OTHER</div>
+        <div class="l-footer__contents">
 
-        <div class="c-footer-box">
-            <div class="c-footer-box__title">MEDIA</div>
-            <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
+            <div class="c-footer-box">
+                <div class="c-footer-box__title">MEDIA</div>
+                <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
+            </div>
+            <div class="c-footer-box">
+                <div class="c-footer-box__title">MEDIA</div>
+                <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
+            </div>
+            <div class="c-footer-box">
+                <div class="c-footer-box__title">VIDEO</div>
+                <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
+            </div>
+            <div class="c-footer-box">
+                <div class="c-footer-box__title">VIDEO</div>
+                <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
+            </div>
+            <div class="c-footer-box">
+                <div class="c-footer-box__title">EVENT</div>
+                <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
+            </div>
+
         </div>
-
-        <div class="c-footer-box">
-            <div class="c-footer-box__title">MEDIA</div>
-            <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
-        </div>
-
-        <div class="c-footer-box">
-            <div class="c-footer-box__title">VIDEO</div>
-            <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
-        </div>
-
-        <div class="c-footer-box">
-            <div class="c-footer-box__title">VIDEO</div>
-            <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
-        </div>
-
-        <div class="c-footer-box">
-            <div class="c-footer-box__title">EVENT</div>
-            <img src="https://placehold.jp/6a6ac0/ffffff/300x300.png" class="c-footer-box__image">
-        </div>
-
-
 
     </div>
 
     <div class="l-footer__container">
         <div class="l-footer__container__title">FOLLOW US</div>
         <div class="l-footer__container__text">TABI LABOの最新記事をCHECK!</div>   
-        <div class="c-footer-box">
-            <a href="https://www.facebook.com/tabilabonews/"><i class="fab fa-thin fa-facebook-f c-footer-box__icon"></i></a>
-        </div>
-        <div class="c-footer-box">
-            <a href="https://twitter.com/intent/follow?screen_name=tabilabo_news"><i class="fab fa-thin fa-twitter c-footer-box__icon"></i></a>
-        </div>
-        <div class="c-footer-box">    
-            <a href="https://www.instagram.com/tabilabo/"><i class="fab fa-thin fa-instagram c-footer-box__icon"></i></a>
-        </div>
-        <div class="c-footer-box">
-            <a href="https://www.youtube.com/channel/UCosiTouV3orvNLj_mLwpxiA"><i class="fab fa-thin fa-youtube c-footer-box__icon"></i></a>
-        </div>
-        <div class="c-footer-box">
-            <a href="http://bit.ly/2iUk72I"><i class="fab fa-thin fa-line c-footer-box__icon"></i></a>
-        </div>
-        
+        <a href="https://www.facebook.com/tabilabonews/"><i class="fab fa-thin fa-facebook-f c-footer-box__icon"></i></a>
+        <a href="https://twitter.com/intent/follow?screen_name=tabilabo_news"><i class="fab fa-thin fa-twitter c-footer-box__icon"></i></a>
+        <a href="https://www.instagram.com/tabilabo/"><i class="fab fa-thin fa-instagram c-footer-box__icon"></i></a>
+        <a href="https://www.youtube.com/channel/UCosiTouV3orvNLj_mLwpxiA"><i class="fab fa-thin fa-youtube c-footer-box__icon"></i></a>
+        <a href="http://bit.ly/2iUk72I"><i class="fab fa-thin fa-line c-footer-box__icon"></i></a>    
     </div>
 
     <div class="l-footer__container">
